<resources>
    <string name="app_name">ReWatch Player</string>
    <string name="app_info">%1$s - version %2$s</string>

    <string name="start_page_welcome_message">Welcome to ReWatch Player</string>
    <string name="start_page_instruction_message">Link your YouTube account and get your subscriptions and playlists!</string>
    <string name="start_page_link_account_message">Link account</string>

    <!-- Main Page -->
    <string name="main_bottom_nav_title_home">Explore</string>
    <string name="main_bottom_nav_title_library">Library</string>
    <string name="main_bottom_nav_title_downloads">Downloads</string>
    <string name="main_bottom_nav_title_about">About</string>

    <!-- Search -->
    <string name="search_option_by_title">Search by title</string>
    <string name="search_option_by_id">Search by ID</string>

    <!-- Player -->
    <string name="player_archive_option_video">Video Resolution</string>
    <string name="player_archive_option_audio">Audio Quality</string>
    <string name="player_option_info">information</string>
    <string name="player_option_resolution">resolution</string>
    <string name="player_option_archive">archive</string>
    <string name="player_option_speed">speed</string>
    <string name="player_option_share">share</string>
    <string name="player_dialog_speed_title">Playback speed</string>
    <string name="player_dialog_speed_advance">Advance</string>
    <string name="player_archive_option_title">Archive</string>
    <string name="player_quality_option_title">Resolution</string>
    <string name="player_share_title">Share link</string>

    <string name="player_video_info_title">Information</string>
    <string name="player_video_info_video_title">title</string>
    <string name="player_video_info_channel_title">channel</string>
    <string name="player_video_info_video_id">video id</string>
    <string name="player_video_info_description">description</string>
    <string name="player_video_info_video_tags">tags</string>
    <string name="player_video_info_view_channel">view channel</string>

    <string name="player_alert_enable_stream_with_mobile_data">Mobile data connected. Enable play video using mobile data?</string>
    <string name="player_alert_enable_stream_with_mobile_data_cancel">Not able to stream data with mobile data.</string>
    <string name="player_restore_last_play_position_message">Restore last play position?</string>
    <string name="player_error_title">Error</string>
    <string name="player_error_server_connect_fail">Server connection failed</string>
    <string name="player_error_no_video_id">No video ID %1$s</string>
    <string name="player_error_no_video_meta">No video meta</string>
    <string name="player_error_no_yt_info">No YTInfo</string>
    <string name="player_error_no_available_quality">No available quality</string>
    <string name="player_error_server_error">Server error: %1$s</string>
    <string name="player_error_unknown">Unknown error</string>
    <string name="player_error_malformed_url">Cannot handle malformed URL / non YouTube URL</string>

    <string name="player_archive_dialog_message">Select quality:</string>
    <string name="player_archive_new_tasks">%1$d new task(s) added</string>
    <string name="player_archive_no_new_tasks">required file(s) already exist</string>

    <!-- Library -->
    <string name="library_list_channel">Channel</string>
    <string name="library_list_playlist">Playlist</string>
    <string name="library_list_bookmarked">Bookmark</string>
    <string name="library_list_watch_history">Watch history</string>
    <string name="library_action_remove_bookmark">Remove bookmark</string>
    <string name="library_bookmark_removed">%1$d bookmark(s) removed</string>
    <string name="library_history_removed">%1$d history(ies) removed</string>
    <string name="library_option_search">Search</string>

    <!-- Channel -->
    <string name="channel_subscriber_count">%1$d subscribers</string>
    <string name="channel_video_count">%1$d videos</string>
    <string name="channel_uploaded_title">Uploaded</string>
    <string name="channel_playlist_title">Playlist</string>

    <!-- Download -->
    <string name="download_notification_description">quality: %1$s</string>
    <string name="download_action_remove">Remove archive</string>
    <string name="download_status_pending">Pending</string>
    <string name="download_status_paused">Paused</string>
    <string name="download_status_failed">Failed</string>
    <string name="download_reason_paused_queued_for_wifi">Queued for WiFi</string>
    <string name="download_reason_paused_unknown">Unknown</string>
    <string name="download_reason_paused_waiting_for_network">Waiting for network</string>
    <string name="download_reason_paused_waiting_to_retry">Waiting to retry</string>
    <string name="download_reason_error_cannot_resume">Cannot resume</string>
    <string name="download_reason_error_device_not_found">Device not found</string>
    <string name="download_reason_error_file_already_exists">File already exists</string>
    <string name="download_reason_error_file_error">File error</string>
    <string name="download_reason_error_http_data_error">HTTP data error</string>
    <string name="download_reason_error_insufficient_space">Insufficient space</string>
    <string name="download_reason_error_too_many_redirect">Too many redirect</string>
    <string name="download_reason_error_unhandled_http_code">Unhandled HTTP code</string>
    <string name="download_reason_error_unknown">Unknown</string>
    <string name="download_confirm_delete">Confirm to delete item(s)?</string>
    <string name="download_delete_message">Item(s) deleted</string>
    <!--  Common error  -->
    <string name="error_loading_resource">Error occurred while loading resource</string>
    <string name="error_network_disconnected">Network disconnected</string>
    <string name="error_unknown">Unknown error</string>

    <!-- Common string -->
    <string name="confirm_text">OK</string>
    <string name="negative_text">No</string>
    <string name="cancel_text">Cancel</string>
    <string name="default_text">Default</string>
    <string name="empty_list">Oh, it is empty!</string>
    <string name="retry">Retry</string>

    <!-- Setting -->
    <string name="setting_account">Account</string>
    <string name="setting_account_account_name">account name</string>
    <string name="setting_player">Player</string>
    <string name="setting_player_play_only_using_wifi">allow play only when using Wi-Fi</string>
    <string name="setting_download">Download</string>
    <string name="setting_download_download_location">download location</string>
    <string name="setting_download_storage_used">storage used</string>

    <string name="settings_request_get_account_permission">This app needs to access your Google account (via Contacts).</string>
    <string name="settings_request_write_storage_permission">This app needs permission to write to storage for download.</string>

    <string name="settings_title">Settings</string>
    <string name="settings_player_section">Player</string>
    <string name="settings_download_section">Download</string>
    <string name="settings_data_storage_section">Data and Storage</string>
    <string name="settings_player_skip_forward">Skip forward</string>
    <string name="settings_player_skip_backward">Skip backward</string>
    <string-array name="player_skip_time_entries">
        <item>5 seconds</item>
        <item>10 seconds</item>
        <item>15 seconds</item>
        <item>30 seconds</item>
        <item>1 minute</item>
        <item>5 minutes</item>
    </string-array>
    <string name="settings_player_enable_pip">Enable picture-in-picture</string>
    <string name="settings_player_enable_pip_description">Enable viewing player above other apps when app goes background.</string>
    <string name="settings_player_enable_pip_not_supported">Your device does not support picture-in-picture.</string>
    <string name="settings_player_enable_pip_disabled">Picture-in-picture is disabled in settings. Click to open settings.</string>
    <string name="settings_player_play_downloaded_quality">Always play downloaded video if exist</string>
    <string name="settings_player_play_downloaded_quality_on">Always try to play existing downloaded clips</string>
    <string name="settings_player_play_downloaded_quality_off">Always streams video online</string>
    <string name="settings_allow_video_streaming_env">Allow video streaming when using</string>
    <string name="settings_allow_play_in_background">Allow play video in background</string>
    <string name="settings_allow_play_in_background_description">Player will continue playing video even if the app is in background. Enable this will increase battery consumption.</string>
    <string name="settings_allow_download_env">Allow download when using</string>
    <string-array name="data_usage_network_type">
        <item>WiFi only</item>
        <item>WiFi and mobile data</item>
    </string-array>
    <string name="settings_on_text">On</string>
    <string name="settings_off_text">Off</string>
    <string name="settings_enabled_text">Enabled</string>
    <string name="settings_disabled_text">Disabled</string>

    <string name="account_current_account_title">Current account</string>
    <string name="account_section_setting_title">Settings</string>
    <string name="account_section_about_title">About</string>
    <string name="account_app_info_title">App info</string>
    <string name="account_guide_title">Guide</string>
    <string name="account_check_update">Check update</string>
    <string name="account_section_help_title">Help</string>
    <string name="account_faq_title">FAQ</string>
    <string name="account_contact_title">Contact</string>
    <string name="account_menu_settings_title">Settings</string>

    <!--  Player Service  -->
    <string name="player_notification_channel_name">ReWatch Player</string>
    <string name="player_notification_channel_description">Playing video in background</string>
    <string name="player_notification_unknown_title">Unknown title</string>
    <string name="player_notification_unknown_content">Unknown content</string>

    <!--  Google Auth  -->
    <string name="google_auth_ok">Permission obtained, please reload resource.</string>
    <string name="google_auth_cancelled">Permission denied. You must provide permission to access YouTube resource.</string>

    <string name="update_new_version">New version found</string>
    <string name="update_no_update">You are up to date</string>
    <string name="update_info_template">version %1$s\nrelease date: %2$s\nrelease note: \n%3$s</string>
    <string name="update_download">Download</string>
    <string name="update_not_now">Not now</string>
    <string name="update_confirm">OK</string>
    <string name="update_download_title">Downloading new APK</string>
    <string name="update_download_cannot_open_downloaded_apk">Cannot open downloaded apk</string>

    <!--  Deep link service  -->
    <string name="find_in_rewatch_player">Find video in Rewatch Player</string>

</resources>
