<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="14dp"
    android:paddingBottom="14dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">
    <TextView
        android:id="@+id/video_option_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_archive_option_video"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/video_option_spinner"
        app:layout_constraintBottom_toBottomOf="@id/video_option_spinner"/>
    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/video_option_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/audio_option_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_archive_option_audio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/audio_option_spinner"
        app:layout_constraintBottom_toBottomOf="@id/audio_option_spinner"/>
    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/audio_option_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/video_option_spinner"
        android:layout_marginTop="14dp"/>
    <Button
        android:id="@+id/confirm_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/audio_option_spinner"
        android:layout_marginTop="20dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>