<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="?attr/textAppearanceSubtitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="14dp"
                android:paddingTop="14dp"
                android:paddingEnd="14dp"
                android:paddingBottom="8dp"
                android:text="@string/settings_player_section"
                android:textStyle="bold" />

            <com.amoscyk.android.rewatchplayer.ui.setting.SettingItemCell
                android:id="@+id/cell_skip_forward"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.amoscyk.android.rewatchplayer.ui.setting.SettingItemCell
                android:id="@+id/cell_skip_backward"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.amoscyk.android.rewatchplayer.ui.setting.SettingSwitchItemCell
                android:id="@+id/cell_enable_pip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.amoscyk.android.rewatchplayer.ui.setting.SettingSwitchItemCell
                android:id="@+id/cell_play_downloaded_quality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.amoscyk.android.rewatchplayer.ui.setting.SettingItemCell
                android:id="@+id/cell_allow_video_stream_env"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.amoscyk.android.rewatchplayer.ui.setting.SettingSwitchItemCell
                android:id="@+id/cell_allow_play_when_screen_off"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:background="@android:color/darker_gray" />

            <TextView
                style="?attr/textAppearanceSubtitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="14dp"
                android:paddingTop="14dp"
                android:paddingEnd="14dp"
                android:paddingBottom="8dp"
                android:text="@string/settings_download_section"
                android:textStyle="bold" />

            <com.amoscyk.android.rewatchplayer.ui.setting.SettingItemCell
                android:id="@+id/cell_allow_download_network_env"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:background="@android:color/darker_gray" />

            <TextView
                style="?attr/textAppearanceSubtitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="14dp"
                android:paddingTop="14dp"
                android:paddingEnd="14dp"
                android:paddingBottom="8dp"
                android:text="@string/settings_data_storage_section"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>