<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/current_user_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                android:paddingStart="14dp"
                android:paddingTop="20dp"
                android:paddingEnd="14dp"
                android:paddingBottom="20dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ic_account_circle"
                    android:tint="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="14dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/account_current_account_title"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_current_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="example@google.com" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="14dp"
                android:paddingTop="25dp"
                android:paddingEnd="14dp"
                android:paddingBottom="8dp"
                android:text="@string/account_section_about_title"
                android:textStyle="bold" />

            <com.amoscyk.android.rewatchplayer.ui.setting.SettingItemCell
                android:id="@+id/btn_tutorial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:background="@android:color/darker_gray" />

            <com.amoscyk.android.rewatchplayer.ui.setting.SettingItemCell
                android:id="@+id/btn_app_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:background="@android:color/darker_gray"
                android:visibility="gone" />

            <com.amoscyk.android.rewatchplayer.ui.setting.SettingItemCell
                android:id="@+id/btn_check_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="14dp"
                android:paddingTop="25dp"
                android:paddingEnd="14dp"
                android:paddingBottom="8dp"
                android:text="@string/account_section_help_title"
                android:textStyle="bold" />

            <com.amoscyk.android.rewatchplayer.ui.setting.SettingItemCell
                android:id="@+id/btn_faq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:background="@android:color/darker_gray" />

            <com.amoscyk.android.rewatchplayer.ui.setting.SettingItemCell
                android:id="@+id/btn_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:background="@android:color/darker_gray"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tv_app_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textAlignment="center" />
</LinearLayout>